<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:key="pref_general_settings_cat"
        android:title="@string/pref_general_settings">
        <com.nostalgiaemulators.framework.ui.preferences.ControllableListPreference
            android:defaultValue="1"
            android:entries="@array/general_pref_quality_list"
            android:entryValues="@array/general_pref_quality_values"
            android:key="general_pref_quality"
            android:summary="@string/general_pref_quality_desc"
            android:title="@string/general_pref_quality" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="game_pref_ui_timeshift"
            android:summary="@string/game_pref_ui_timeshift_desc"
            android:title="@string/game_pref_ui_timeshift" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_wifi_server_enable"
            android:summary="@string/general_pref_wifi_controlable_desc"
            android:title="@string/general_pref_wifi_controlable" />


        <!--
       <CheckBoxPreference
                   android:defaultValue="false"
                   android:key="general_pref_smoothing"
                   android:title="@string/general_pref_smoothing" />
              -->


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_quicksave"
            android:summary="@string/general_pref_quick_save_load_desc"
            android:title="@string/general_pref_quick_save_load" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_use_system_font"
            android:summary="@string/general_pref_system_font_desc"
            android:title="@string/general_pref_system_font" />


        <!--
               <CheckBoxPreference
            android:key="general_pref_opengl"
            android:defaultValue="true"            
            android:title="OpenGL rendering" />
        -->

    </PreferenceCategory>

    <PreferenceCategory android:title="Sound">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_mute"
            android:title="@string/general_pref_mute" />

        <com.nostalgiaemulators.framework.ui.preferences.ControllableSeekBarPreference
            android:defaultValue="100"
            android:dialogMessage=""
            android:key="general_pref_sound_volume"
            android:max="100"
            android:text="%"
            android:title="@string/general_pref_sound_volume" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Layout">

        <Preference
            android:key="general_pref_touch_layout"
            android:summary="@string/pref_touch_desc"
            android:title="@string/pref_touch_settings">
            <intent
                android:targetClass="com.nostalgiaemulators.framework.ui.preferences.TouchControllerSettingsActivity"
                android:targetPackage="@string/flavour_package"/>
        </Preference>
        <Preference
            android:key="general_pref_screen_layout"
            android:summary="@string/pref_screen_desc"
            android:title="@string/pref_screen_settings">
            <intent
                android:targetClass="com.nostalgiaemulators.framework.ui.preferences.ScreenViewPortSettingsActivity"
                android:targetPackage="@string/flavour_package"
                />
        </Preference>

    </PreferenceCategory>


    <PreferenceCategory android:title="Display Settings">

        <com.nostalgiaemulators.framework.ui.preferences.ControllableListPreference
            android:defaultValue="0"
            android:entries="@array/general_pref_shader_list"
            android:entryValues="@array/general_pref_shader_values"
            android:key="general_pref_shader"
            android:title="@string/general_pref_shader"
            android:summary="Select pixel-art scaling filter"/>


        <com.nostalgiaemulators.framework.ui.preferences.ControllableListPreference
            android:defaultValue="0"
            android:entries="@array/general_pref_rotation_list"
            android:entryValues="@array/general_pref_rotation_values"
            android:key="general_pref_rotation"
            android:title="@string/general_pref_rotation" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_fullscreen"
            android:title="@string/general_pref_fullscreen" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_immersive_mode"
            android:title="@string/general_pref_immersive_mode"
            android:summary="Hide system bars"

            />


    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_about"
        android:key="pref_general_touch_cat"
        android:title="Touch Controller Settings">


        <!--  <Preference
             android:key="general_pref_screen_layout"
             android:summary="@string/pref_screen_desc"
             android:title="@string/pref_screen_settings"  >
             <intent
                 android:action="@string/action_screen_pref"
                 android:key="void" >
             </intent>
         </Preference> -->

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_ddpad"
            android:summary="@string/general_pref_ddpad_desc"
            android:title="@string/general_pref_ddpad" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_turbo"
            android:title="@string/general_pref_turbo" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_ab_button"
            android:title="@string/general_pref_ab_button" />


        <com.nostalgiaemulators.framework.ui.preferences.SeekBarVibrationPreference
            android:defaultValue="0"
            android:dialogMessage=""
            android:key="game_pref_ui_strong_vibration"
            android:max="100"
            android:summary="Strength of vibrations"
            android:text="%"
            android:title="@string/game_pref_ui_vibration" />

        <com.nostalgiaemulators.framework.ui.preferences.ControllableSeekBarPreference
            android:defaultValue="100"
            android:dialogMessage=""
            android:key="general_pref_ui_opacity"
            android:max="100"
            android:summary="@string/general_pref_controls_opacity_desc"
            android:text="%"
            android:title="@string/general_pref_controls_opacity" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="general_pref_ui_autohide"
            android:summary="@string/general_pref_controls_autohide_desc"
            android:title="@string/general_pref_controls_autohide" />


    </PreferenceCategory>


    <PreferenceCategory
        android:key="general_pref_ff_cat"
        android:title="Fast Forward Settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="general_pref_fastforward"
            android:title="@string/general_pref_fastforward_button" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="general_pref_fastforward_toggle"
            android:summary="@string/general_pref_fastforward_toggle_desc"
            android:title="@string/general_pref_fastforward_toggle" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="4"
            android:dialogMessage=""
            android:key="general_pref_ff_speed"
            android:max="5"
            android:text="[hack]"
            android:title="@string/general_pref_fastforward_speed" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="general_pref_sav_cat"
        android:title="SAV File Settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="general_pref_load_sav_files"
            android:summary="@string/general_pref_load_sav_files_desc"
            android:title="@string/general_pref_load_sav_files" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="general_pref_save_sav_files"
            android:summary="@string/general_pref_load_sav_files_desc"
            android:title="@string/general_pref_save_sav_files" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_keyboard_cat"
        android:title="@string/key_pref">
        <com.nostalgiaemulators.framework.ui.preferences.ControllableListPreference
            android:key="pref_game_keyboard_profile"
            android:title="@string/key_select_profile_pref" />

        <Preference
            android:key="pref_game_keyboard_edit_profile"
            android:title="@string/key_profile_edit">
            <intent
                android:targetClass="com.nostalgiaemulators.framework.ui.preferences.KeyboardSettingsActivity"
                android:targetPackage="@string/flavour_package"/>
        </Preference>

        <Preference
            android:key="pref_game_keyboard_select_input_method"
            android:title="@string/key_profile_select_input_method"/>

        <!--
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/general_pref" >
        -->
    </PreferenceCategory>

    <PreferenceCategory android:title="Working Directory">

        <Preference
            android:key="general_pref_working_dir"
            android:summary="@string/general_pref_default"
            android:title="@string/general_pref_change_working_directory" />
        <Preference
            android:key="general_pref_working_dir_change_to_default"
            android:title="@string/general_pref_reset_to_default" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="general_pref_working_dir_copy_content"
            android:summary="@string/general_pref_copy_content_desc"
            android:title="@string/general_pref_copy_content" />
    </PreferenceCategory>
</PreferenceScreen>