<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/game_dialog_bck"
        android:orientation="vertical"
        android:padding="35dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
          

            <TextView
                android:id="@+id/tips_dialog_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/tips_dialog_label"
                android:textColor="@color/dialog_main_color"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tips_dialog_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="1/10"
                android:textColor="@color/dialog_main_color"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/dialog_main_color" >
        </LinearLayout>

        <ScrollView
            android:id="@+id/tips_dialog_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/tips_dialog_bottom_line"
            android:orientation="horizontal"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/dialog_main_color" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/tips_dialog_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dialog_button_shape"
                android:padding="10dp"
                android:text="@string/tips_dialog_prev"
                android:textColor="@color/dialog_main_color" />

            <LinearLayout                
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </LinearLayout>

            <Button
                android:id="@+id/tips_dialog_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dialog_button_shape"
                android:padding="10dp"
                android:text="@string/tips_dialog_next"
                android:textColor="@color/dialog_main_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>